# Retnet-Distillation

./: .gitignore  LICENSE  QUICKSTART.md  README.md  README_FAST_ENDPOINT.md  RUN_TRAINING.md  pyproject.toml  quickstart.md  requirements.txt  test_gradient_flow.py  train_with_memory_fix.sh
configs/: dataset_download.yaml  decoding_profiles.yaml  model_config.py  network.yaml  retrieval_manifest.yaml  stage1_kd.yaml  stage1_kd_350m.yaml  stage1_kd_500m.yaml  teacher_ft.yaml  tools.yaml  train_cached.yaml  train_direct.yaml  train_direct_cached.yaml  train_network.yaml  train_network_cached.yaml
configs/encoder/: README.md  baseline.yaml  with_hard_negatives.yaml
configs/stabilization/: runtime_manifest.example.yaml  runtime_manifest.schema.json
data/: DATASET_DOWNLOAD_README.md  QUICKSTART.md  README.md  build_dataset.py  download_curriculum_datasets.py  download_missing_datasets.py  preprocess_to_parquet.py  preprocess_to_parquet_parallel.py  schema.py  test_tokenization.py
data/distillation_preprocessed_instruct/: manifest.json
data/dummy_test/: test.jsonl  (+5 more)
model/: dfa.py  heads.py  loss.py  nets.py  tokenizer.py
scripts/: EVALUATION_SUMMARY.md  README.md  README_evaluate_checkpoint.md  cache_teacher_logits.py  calculate_cache_storage.py  compare_teachers.py  debug_data_quality.py  debug_teacher_client.py  debug_teacher_student_alignment.py  demo_perplexity_fix.py  diagnose_act.py  evaluate_checkpoint.py  finetune_teacher.py  monitor_training_resources.sh  prepare_datasets.py  preprocess_data.py  profile_training.py  test_cache_fix.sh  test_dataset_loading.py  test_fast_endpoint.py  test_simple_teacher.py  test_vllm_integration.py  validate_gates.sh
tests/: __init__.py  run_phase5_tests.py  test_fsm_penalty_debug.py  test_gpu_fsm_benchmark.py  test_mask_cache.py  test_segment_isolation_direct.py  test_segmented_attention.py  test_structure_canary.py  test_vectorized_fsm.py  test_vectorized_states_simple.py
tools/: attention_forecast.py  decoding_profiles.py  generate_proposal.py  retrieval_validate.py  runtime_check.py  session_export.py  session_restore.py
torchscale/: .gitignore  README.md  setup.py
utils/: logging_config.py  msvc_setup.py  number_wrapping.py
vllm_extensions/: vllm_topk_endpoint.py
(+205 files in other folders)
