[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retnet-distillation"
version = "0.1.0"
description = "RetNet-Distillation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "RetNet-distillation Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "tokenizers>=0.15.0",
    "safetensors>=0.4.0",
    "sympy>=1.12",
    "jsonschema>=4.20.0",
    "wandb>=0.16.0",
    "datasets>=2.15.0",
    "numpy>=1.24.0",
    "accelerate>=0.25.0",
    "tqdm>=4.66.0",
    # v1 Distillation dependencies (T002)
    "vllm>=0.2.0",
    "bitsandbytes>=0.41.0",
    "pyarrow>=14.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
retnet-train = "src.cli.train:main"
retnet-infer = "src.cli.infer:main"
retnet-index = "src.cli.index:main"

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | checkpoints
  | indexes
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "checkpoints",
    "data/shards",
    "wandb",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "integration: marks integration tests",
]
